# clipygo-plugin-telegram

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: api.rs  config.rs  handler.rs  main.rs  protocol.rs
